Switch to theme 'Hybrid'

--- a/src/stylesheet.scss
+++ b/src/stylesheet.scss
@@ -2,7 +2,7 @@ $HEADER_FONT_SIZE: 14px;
 $HEADER_HEIGHT: 32px;
 $TAB_SIZE: 4;
 $PADDING_CODE: 4px;
-$BACKGROUND_COLOR: #23241f; // Monokai dark gray
+$BACKGROUND_COLOR: #1d1f21; // must match theme
 $TEXT_COLOR: white;
 
 * {
